[tool.poetry]
name = "my-web-framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_web_framework"}]

[tool.poetry.dependencies]
python = "3.11"
pytest = "^7.2.1"
gunicorn = "^20.1.0"
socks = "^0"
webob = "^1.8.7"
parse = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
